# packages

./: .gitignore  Dockerfile  README.md  main.py  models.py  prometheus.yml  pyproject.toml  requirements.txt
service/: docker-compose.yml  grafana.json  main.py
